# taffy

./: .gitattributes  .gitignore  .markdownlint.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE.md  NOTICE  README.md  RELEASES.md  StretchKit.podspec  deny.toml  justfile  rust-toolchain.toml  strings.txt
.cargo/: config.toml
.circleci/: config.yml
.github/: dependabot.yml  pull_request_template.md
benches/: Cargo.toml  big_tree.rs  big_tree_flexbox.rs  big_tree_grid.rs  complex.rs  dummy_benchmark.rs  flexbox.rs  generated.rs  grid.rs  results-2022-11-23.md  results-2022-12-07.md  results-2023-02-08.md  tree_creation.rs  yoga.rs  yoga_helpers.rs
benches/benches/: display_contents.rs  flexbox.rs  grid.rs  mixed.rs  tree_creation.rs
benches/helpers/: mod.rs  yoga_helpers.rs
benches/src/: lib.rs  random_style.rs  taffy_03_helpers.rs  taffy_helpers.rs  yoga_helpers.rs
bindings/c/: .gitignore  Cargo.toml  README.md  cbindgen.toml  generate-bindings.sh
bindings/c/examples/: basic.c  compile_basic.sh
bindings/c/include/: taffy.h
bindings/c/src/: error.rs  lib.rs  style.rs  style_enums.rs  tree.rs  value.rs
bindings/java/: .gitignore  Cargo.toml  README.md  run.sh
bindings/java/java/: build.gradle.kts  pom.xml  settings.gradle.kts
bindings/java/java/com/dioxuslabs/taffy/: Taffy.java  TaffyTree.java  com_dioxuslabs_taffy_TaffyTree.h
bindings/java/java/com/dioxuslabs/taffy/geom/: TaffyLine.java  TaffyPoint.java  TaffyRect.java  TaffySize.java
bindings/java/java/com/dioxuslabs/taffy/geom/grid/: TaffyGenericGridPlacement.java  TaffyGridTrackRepetition.java  TaffyMinTrackSizingFunction.java  TaffyTrackSizingFunction.java
bindings/java/java/com/dioxuslabs/taffy/geom/measure/: TaffyLengthPercentage.java  TaffyLengthPercentageAuto.java
bindings/java/java/com/dioxuslabs/taffy/style/: TaffyAlignContent.java  TaffyAlignItems.java  TaffyDisplay.java  TaffyFlexDirection.java  TaffyFlexWrap.java  TaffyGridAutoFlow.java  TaffyPosition.java  TaffyStyle.java  TaffyTextAlign.java
bindings/java/java/com/dioxuslabs/taffy/tree/: TaffyLayout.java
bindings/java/java/examples/java/com/dioxuslabs/taffy/: Basic.java  FlexboxGap.java  Measure.java  Nested.java
bindings/java/java/examples/java/com/dioxuslabs/taffy/common/: Image.java  Text.java
bindings/java/java/src/examples/java/com/dioxuslabs/taffy/examples/: Basic.java  FlexboxGap.java  GridHolyGrail.java  Measure.java  Nested.java
bindings/java/java/src/main/java/com/dioxuslabs/taffy/: AlignContent.java  AlignItems.java  AlignSelf.java  AvailableSpace.java  BoxSizing.java  Dimension.java  Display.java  FlexDirection.java  FlexWrap.java  GridAutoFlow.java  GridPlacement.java  GridTemplate.java  GridTemplateArea.java  GridTrack.java  JustifyContent.java  Layout.java  LengthPercentage.java  LengthPercentageAuto.java  MeasureFunction.java  NativeBridge.java  NativeLoader.java  Overflow.java  Position.java  Style.java  Taffy.java  TaffyException.java  TaffyTree.java  com_dioxuslabs_taffy_TaffyTree.h
bindings/java/java/src/main/java/com/dioxuslabs/taffy/enums/: AbsoluteAxis.java  AlignContent.java  AlignItems.java  BoxGenerationMode.java  BoxSizing.java  Display.java  FlexDirection.java  FlexWrap.java  GridAutoFlow.java  Overflow.java  Position.java  TextAlign.java
bindings/java/java/src/main/java/com/dioxuslabs/taffy/geom/: Line.java  Point.java  Rect.java  Size.java  TaffySize.java
bindings/java/java/src/main/java/com/dioxuslabs/taffy/geom/grid/: GenericGridPlacement.java  GridTrackRepetition.java  MaxTrackSizingFunction.java  MinTrackSizingFunction.java  NonRepeatedTrackSizingFunction.java  TaffyMaxTrackSizingFunction.java  TaffyNonRepeatedTrackSizingFunction.java  TrackSizingFunction.java
bindings/java/java/src/main/java/com/dioxuslabs/taffy/geom/measure/: AvailableSpace.java  Dimension.java  LengthPercentage.java  LengthPercentageAuto.java  TaffyAvailableSpace.java  TaffyDimension.java  TaffyLengthPercentage.java
bindings/java/java/src/main/java/com/dioxuslabs/taffy/style/: AlignContent.java  AlignItems.java  BoxSizing.java  Display.java  FlexDirection.java  FlexWrap.java  GridAutoFlow.java  Overflow.java  Position.java  Style.java  TaffyAlignContent.java  TaffyBoxSizing.java  TaffyFlexDirection.java  TaffyFlexWrap.java  TaffyOverflow.java  TaffyTextAlign.java  TextAlign.java
bindings/java/java/src/main/java/com/dioxuslabs/taffy/tree/: Layout.java
bindings/java/java/src/main/java/dev/dioxus/taffy/: AlignContent.java  AlignItems.java  AlignSelf.java  AvailableSpace.java  BoxSizing.java  Dimension.java  Display.java  FlexDirection.java  FlexWrap.java  GridAutoFlow.java  GridPlacement.java  GridTrack.java  JustifyContent.java  Layout.java  LengthPercentage.java  LengthPercentageAuto.java  NativeBridge.java  NativeLoader.java  Overflow.java  Position.java  Style.java  TaffyException.java  TaffyTree.java
bindings/java/java/src/test/java/com/dioxuslabs/taffy/: BasicLayoutTest.java  BorderAndPaddingTests.java  GridLayoutTest.java  MeasureFunctionTest.java  RoundingTests.java  StyleGettersTest.java  TaffyTests.java  TreeGetStyleTest.java
bindings/java/java/src/test/java/dev/dioxus/taffy/: BasicLayoutTest.java
bindings/java/rust/: Cargo.toml
bindings/java/rust/src/: lib.rs
bindings/java/src/: collections.rs  conversions.rs  enums.rs  geom.rs  java.rs  lib.rs  measure.rs  primitives.rs  traits.rs
bindings/kotlin/stretch/src/main/rust/: Cargo.toml  rustfmt.toml
bindings/kotlin/stretch/src/main/rust/src/: lib.rs
bindings/scripts/: Cargo.toml
bindings/scripts/src/: main.rs
bindings/wasm/: Cargo.toml  wasm_test.html
bindings/wasm/src/: lib.rs  unused_code.rs  utils.rs
bindings/wasm/tests/: layout_tests.rs
docs/: gatsby-config.js  morphorm-style-properties.md  package.json  style-properties.md
examples/: basic.rs  cosmic_text.rs  custom_layout_tree_owned.rs  custom_tree_owned.rs  (+9 more)
scripts/gentest/: Cargo.toml  test_base_style.css  test_helper.js
scripts/gentest/src/: calc.rs  main.rs
taffy_stylo/: Cargo.toml
taffy_stylo/src/: arc.rs  borrowed.rs  convert.rs  lib.rs  t2s.rs
(+9042 files in other folders)
