[package]
name = "taffy"
version = "0.3.11"
authors = [
    "Alice Cecile <alice.i.cecile@gmail.com>",
    "Johnathan Kelley <jkelleyrtp@gmail.com>",
]
edition = "2021"
rust-version = "1.65"
include = ["src/**/*", "Cargo.toml", "README.md"]
description = "A flexible UI layout library "
repository = "https://github.com/DioxusLabs/taffy"
keywords = ["cross-platform", "layout", "flexbox", "css-grid", "grid"]
categories = ["gui"]
license = "MIT"

[dependencies]
arrayvec = { version = "0.7", default-features = false }
num-traits = { version = "0.2", default-features = false }
serde = { version = "1.0", optional = true, features = ["serde_derive"] }
slotmap = { version = "1.0.6", optional = true }
grid = { version = "0.11.0", default-features = false, optional = true }

### FEATURES #################################################################

[features]
default = ["std", "taffy_tree", "flexbox", "grid", "block_layout"]

### Algorithms 

# Enables the Block layout algorithm
block_layout = []
# Enables the Flexbox layout algorithm
flexbox = []
# Enables the CSS Grid layout algorithm
grid = ["alloc", "dep:grid"]

### Taffy Tree

# Enable the built-in Taffy node tree
taffy_tree = ["dep:slotmap"]

### Other

# Add serde derives to Style structs
serde = ["dep:serde"]
# Allow Taffy to depend on the standard library
std = ["num-traits/std", "grid?/std"]
# Allow Taffy to depend on the alloc library
alloc = []
# Internal featyre for debugging
debug = ["std"]
# Internal feature for profiling
profile = ["std"]

[dev-dependencies]
serde_json = "1.0.93"

# Enable default features for tests and examples
taffy = { path = "." }

[profile.release]
lto = true
panic = 'abort'

[[bench]]
name = "dummy_benchmark"
path = "benches/dummy_benchmark.rs"
harness = false

[workspace]
members = ["scripts/gentest", "scripts/format-fixtures", "scripts/import-yoga-tests", "benches"]
