[package]
name = "taffy_benchmarks"
version = "0.1.0"
authors = [
    "Alice Cecile <alice.i.cecile@gmail.com>",
    "Johnathan Kelley <jkelleyrtp@gmail.com>",
]
edition = "2021"
description = "Benchmarks for the taffy crate"
repository = "https://github.com/DioxusLabs/taffy"
keywords = ["cross-platform", "layout", "benchmarks"]
categories = ["gui", "benchmarks"]
license = "MIT"

[dependencies]
criterion = "0.5"
rand = { version = "0.8.5" }
rand_chacha = "0.3.1"
taffy = { path = ".." }
taffy_03 = { package = "taffy", version = "0.3", optional = true }
yoga = { version = "0.4.0", optional = true }
ordered-float = { version = "3.4.0", optional = true }
slotmap = { version = "1.0.6", optional = true }

[features]
yoga = ["dep:yoga", "dep:slotmap", "dep:ordered-float"]
yoga-super-deep = ["yoga"]
taffy03 = ["dep:taffy_03"]
content_size = ["taffy/content_size"]
small = []
large = []

[[bench]]
name = "tree_creation"
path = "benches/tree_creation.rs"
harness = false

[[bench]]
name = "flexbox"
path = "benches/flexbox.rs"
harness = false

[[bench]]
name = "grid"
path = "benches/grid.rs"
harness = false
