[package]
name = "taffy-wasm"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "WASM bindings for the Taffy CSS layout engine"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
taffy = { path = "../..", features = ["std", "taffy_tree", "flexbox", "grid", "block_layout", "content_size"] }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"

[profile.release]
opt-level = "s"
lto = true
