[package]
name = "gentest"
version = "0.1.0"
authors = ["Emil Sjölander <emil@visly.app>"]
edition = "2018"

[dependencies]
env_logger = "0.9.0"
failure = "0.1"
fantoccini = "0.19.0"
futures = "0.1"
indicatif = "0.16.2"
json = "0.12.0"
log = "0.4"
proc-macro2 = "1.0.6"
quote = "1.0.2"
serde_json = "1"
syn = "1.0.7"
tokio = "1.18"
