[package]
name = "gentest"
version = "0.1.0"
authors = ["Emil Sjölander <emil@visly.app>"]
edition = "2018"

[dependencies]
convert_case = "0.5.0"
env_logger = "0.10.0"
fantoccini = "0.19.0"
json = "0.12.0"
log = "0.4"
proc-macro2 = "1.0.6"
quote = "1.0.2"
serde_json = "1"
syn = "1.0.7"
tokio = { version = "1.18", features = ["full"] }
