[package]
name = "android-stretch"
version = "0.3.2"
authors = ["Emil Sjölander <emil@visly.app>"]
edition = "2018"

[dependencies]
jni = { version = "0.14.0", default-features = false }
stretch = { version = "0.3.2", path = "../../../../../.." }

[lib]
name = "stretch"
crate-type = ["cdylib"]

[workspace]
members = []
